--- a/app/jade/include/footer.jade
+++ b/app/jade/include/footer.jade
@@ -1,6 +1,4 @@
 .footer
-
-
   .appLogoContainer
     h3.subtitle Download Shopee Sekarang!
 
@@ -10,3 +8,6 @@
   span.downloadLinks
     a.download.appleStore.bgImg_contain(target="_blank", href="http://app.appsflyer.com/id959841443?pid=OrganicA&amp;c=lp_home_ios2")
     a.download.googlePlay.bgImg_contain(target="_blank", href="http://app.appsflyer.com/com.shopee.id?pid=OrganicA&amp;c=lp_home_and2")
+
+  .copyright.text-center
+    span &copy; 2015 Shopee
