--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -11,3 +11,9 @@ block main
     include section/banner
 
     include section/artist-profile
+
+    //- include section/timeline
+
+    include section/share-and-win
+
+    include section/testimony
