--- a/app/less/flexslider/css/theme.less
+++ b/app/less/flexslider/css/theme.less
@@ -67,7 +67,7 @@
   // }
 
   a  {
-
+    outline: 0;
     text-decoration: none;
     display: block;
     width: 42px;
@@ -145,12 +145,12 @@
     }
   }
 
-  .flex-disabled {
-    opacity: 0!important;
-    filter: alpha(opacity=0);
-    cursor: default;
-    z-index: -1;
-  }
+  // .flex-disabled {
+  //   opacity: 0!important;
+  //   filter: alpha(opacity=0);
+  //   cursor: default;
+  //   z-index: -1;
+  // }
 }
 
 
