--- a/app/less/web/navbar.less
+++ b/app/less/web/navbar.less
@@ -6,7 +6,7 @@ header {
   width: 100%;
   z-index: 120;
 
-  @media (max-width: @screen-md-min) {
+  @media (max-width: @screen-xs) {
     height: 40px;
     line-height: 40px;
   }
@@ -31,7 +31,7 @@ header {
     line-height: normal !important;
     height: 100% !important;
 
-    @media (max-width: @screen-md-min) {
+    @media (max-width: @screen-xs) {
       margin-right: 20px;
       padding: 0 !important;
       font-size: 12px !important;
@@ -49,7 +49,7 @@ header {
         font-size: 8px !important;
         font-weight: 400;
 
-        @media (max-width: @screen-md-min) {
+        @media (max-width: @screen-xs) {
           right: -20px;
           top: -10px;
         }
@@ -69,7 +69,7 @@ header {
     font-size: 0;
     text-align: right;
 
-    @media (max-width: @screen-md-min) {
+    @media (max-width: @screen-xs) {
       padding-right: 0
     }
   }
@@ -82,7 +82,7 @@ header {
     padding: 0;
     width: 150px;
 
-    @media (max-width: @screen-md-min) {
+    @media (max-width: @screen-xs) {
       height: 40px;
       width: 100px !important;
     }
@@ -90,7 +90,7 @@ header {
   .vHelper {
     height: 70px;
 
-    @media (max-width: @screen-md-min) {
+    @media (max-width: @screen-xs) {
       height: 40px;
     }
   }
@@ -102,7 +102,7 @@ header {
     padding: 0;
     vertical-align: middle;
 
-    @media (max-width: @screen-md-min) {
+    @media (max-width: @screen-xs) {
       display: none;
     }
 
