--- a/app/less/web/footer.less
+++ b/app/less/web/footer.less
@@ -1,8 +1,8 @@
 .footer {
   text-align: center;
   background: #f9e723 url(../img/footer-bg.png) no-repeat bottom center;
-  border-bottom: 30px solid #4d4d4d;
   padding-bottom: 255px;
+  position: relative;
 
   h3 {
     margin: 30px 0 50px 0;
@@ -15,8 +15,8 @@
   .appLogo {
     margin: 15px auto 30px;
     background: url("../img/appLogo.png") no-repeat center center;
-    height: 182px;
-    width: 175px;
+    height: 188px;
+    width: 188px;
     display: block;
   }
 
@@ -58,8 +58,20 @@
     }
   }
 
+  .copyright {
+    width: 100%;
+    padding: 8px 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.5);
+    color: #4d4d4d;
+    font-size: 14px;
+  }
 
-  @media (max-width: @screen-md-min) {
+  @media (max-width: @screen-xs) {
+    padding-bottom: 100px;
+
     h3 {
       margin: 10px 0 20px 0;
       font-size: 35px;
@@ -68,7 +80,7 @@
     .appLogo {
       background-size: contain;
       width: 100px;
-      height: 118px;
+      height: 100px;
     }
 
     .qrCode {
