--- a/app/less/web/home.less
+++ b/app/less/web/home.less
@@ -1,7 +1,7 @@
 .hero-banner {
   margin-top: 70px;
 
-  @media (max-width: @screen-md-min) {
+  @media (max-width: @screen-xs) {
     margin-top: 40px
   }
 
@@ -18,7 +18,7 @@
   padding-top: 70px;
   padding-bottom: 70px;
 
-  @media (max-width: @screen-md-min) {
+  @media (max-width: @screen-xs) {
     padding-top: 30px;
     padding-bottom: 30px;
   }
@@ -70,7 +70,7 @@
       font-size: 16px;
     }
 
-    @media (max-width: @screen-md-min) {
+    @media (max-width: @screen-xs) {
       width: 130px !important;
       min-width: 130px;
       margin-right: 20px;
@@ -79,12 +79,258 @@
         margin-right: 0;
       }
 
+      &:nth-child(6n+1) {
+        margin-right: 20px;
+      }
+
       h5 {
         margin-bottom: 5px;
+        font-size: 16px
       }
 
       img {
         width: 100%;
+      }
+    }
+  }
+}
+
+
+.share-and-win {
+  min-height: 768px;
+  background: #F4F4F4 url(../img/share-and-win-bg.jpg) no-repeat center;
+  background-size: cover;
+
+  @media (max-width: @screen-xs) {
+    min-height: 520px;
+  }
+
+  .subtitle {
+    color: #fff
+  }
+
+  .social-media {
+    margin: 130px 0 0 0;
+
+    @media (max-width: @screen-xs) {
+      margin-top: 40px;
+      margin-left: -15px;
+      margin-right: -15px;
+    }
+
+    .icon {
+      display: inline-block;
+      margin-right: 43px;
+      height: 55px;
+      width: 56px;
+      background: url(../img/sosmed-icon.png) no-repeat;
+
+      &.facebook {
+        background-position: -1px -113px;
+      }
+      &.twitter {
+        background-position: -1px -1px
+      }
+      &.linkedin {
+        background-position: -1px -57px
+      }
+      &.gplus {
+        background-position: -64px -57px
+      }
+      &.email {
+        background-position: -64px -2px;
+        width: 65px;
+        height: 55px;
+      }
+
+      @media (max-width: @screen-xs) {
+        margin-right: 5px;
+
+        &.email {
+          background-position: -64px 1px
+        }
+      }
+    }
+  }
+
+  .form-submit-email {
+    width: 375px;
+    margin: 180px auto 0;
+    h5 {
+      font-size: 21px;
+      font-weight: 400;
+      color: #fff;
+      margin: 0 0 30px 0;
+    }
+
+    #mc_embed_signup {
+
+      input{
+        &.email,
+        &.button {
+          display: inline-block;
+          border:0;
+          font-size: 16px;
+          font-family: "Roboto";
+          font-weight: 400;
+          outline: 0;
+        }
+
+        &.email {
+          background: #fff;
+          border-radius: 2px 0 0 2px;
+          padding: 14px 6px;
+          float: left;
+          margin: 0;
+          width: 258px;
+
+          &:focus {
+            .box-shadow(inset 0 0 0 1px #23b29c);
+          }
+        }
+
+        &.button {
+          background: #23b29c;
+          color: #fff;
+          width: 105px;
+          height: 50px;
+          padding: 0;
+          line-height: 16px;
+          border-radius: 0 2px 2px 0;
+          cursor: pointer;
+
+          &:hover {
+            background: darken( #23b29c, 5%)
+          }
+          &:active,
+          &:focus {
+            background: darken( #23b29c, 10%)
+          }
+        }
+      }
+    }
+
+    @media (max-width: @screen-xs) {
+      width: auto;
+      margin-top: 50px;
+
+      #mc_embed_signup {
+        form {
+          padding: 0;
+
+          input {
+            &.email {
+              width: 200px;
+            }
+
+            &.button {
+              width: 80px
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+.section{
+  &.timeline {
+    height: 3261px;
+    background: #fd470c url(../img/bg-timeline.jpg) repeat-x 0 0;
+  }
+
+  .testimony-section {
+
+    .subtitle {
+      margin-bottom: 100px;
+    }
+
+    #carousel,
+    #testimony-slider {
+      width: 975px;
+      margin: 0 auto;
+    }
+
+    #testimony-slider {
+      margin-bottom: 50px;
+
+      .content-testimony {
+        width: 600px;
+        margin: 0 auto;
+
+        blockquote {
+          width: 495px;
+          float: left;
+          padding: 0 0 0 35px;
+          background: url(../img/blockquote-up.png) no-repeat top left;
+          font-size: 24px;
+          color: #4d4d4d;
+          border-left: 0;
+          margin: 0;
+          position: relative;
+
+          &:after {
+            display: block;
+            content: " ";
+            clear: both;
+          }
+
+          a {
+            color: #f1592b;
+
+            &:hover {
+              color: lighten(#f1592b, 10%)
+            }
+          }
+
+          p {
+            padding-bottom: 45px;
+            background: url(../img/blockquote-down.png) no-repeat bottom right;
+          }
+
+          span {
+            display: block;
+            position: absolute;
+            bottom: 10px;
+            left: 35px;
+            font-size: 14px;
+            color: #23b29c;
+          }
+        }
+      }
+
+      .slides {
+        img {
+          width: 100px;
+          height: 100px;
+          border-radius: 50%;
+          display: block;
+          float: left;
+          margin-right: 5px;
+        }
+      }
+    }
+
+    #carousel {
+      margin-bottom: 30px;
+      .flex-direction-nav {
+        a {
+          width: 67px;
+          height: 67px;
+          background: url(../img/carousel-arrow.png) no-repeat;
+
+          &.flex-prev {
+            left: -85px;
+            background-position: 0 0;
+          }
+
+          &.flex-next {
+            right: -85px;
+            background-position: -68px 0;
+          }
+
+        }
       }
     }
   }
