--- a/static/jade/include/footer.jade
+++ b/static/jade/include/footer.jade
@@ -1,8 +1,10 @@
 .footer
   .appLogoContainer
-    h3.subtitle Download Shopee Sekarang!
+    h3.subtitle Jual Beli di Ponsel Kamu
 
     span.appLogo
+
+    h4 Ayo Download Sekarang!
 
   span.qrCode
   span.downloadLinks
