--- a/static/jade/section/artist-profile.jade
+++ b/static/jade/section/artist-profile.jade
@@ -1,4 +1,4 @@
-.container.section.artist-profile-block
+.container.section.artist-profile-block.text-center
   h3.subtitle.text-center GET THEIR FAVORITE STUFFS!
 
   .artis-item
@@ -39,7 +39,7 @@
 
   .artis-item
     img(src="../img/artis/maliq.png")
-    h5 Maliq
+    h5 MALIQ & D’ESSENTIALS
     span Penyanyi
 
   .artis-item
