--- a/static/less/web/footer.less
+++ b/static/less/web/footer.less
@@ -8,15 +8,22 @@
     margin: 30px 0 50px 0;
   }
 
+  h4 {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
+
   .appLogoContainer {
     padding: 50px 0 20px 0;
   }
 
   .appLogo {
-    margin: 15px auto 30px;
+    margin: 110px auto 55px;
     background: url("../img/appLogo.png") no-repeat center center;
-    height: 188px;
-    width: 188px;
+    background-size: 150px 150px;
+    height: 150px;
+    width: 150px;
     display: block;
   }
 
@@ -40,8 +47,8 @@
     background: #000 none no-repeat scroll center center / 60% auto;
     border-radius: 5px;
     display: inline-block;
-    height: 60px;
-    width: 215px;
+    height: 70px;
+    width: 180px;
 
     &:active,
     &:visited,
@@ -70,7 +77,7 @@
   }
 
   @media (max-width: @screen-xs) {
-    padding-bottom: 100px;
+    padding-bottom: 70px;
 
     h3 {
       margin: 10px 0 20px 0;
@@ -81,32 +88,37 @@
       background-size: contain;
       width: 100px;
       height: 100px;
+      margin-top: 40px;
+    }
+
+    h4 {
+      margin-bottom: 0
     }
 
     .qrCode {
       display: none;
     }
 
-    .downloadLinks {
-      width: 100%;
-      height: auto;
-      display: inline-block;
-      text-align: center;
+    // .downloadLinks {
+    //   width: 100%;
+    //   height: auto;
+    //   display: inline-block;
+    //   text-align: center;
 
-      .download {
-        background: no-repeat;
-        background-size: 60%;
-        border-radius: 5px;
-        display: inline-block;
-        width: 130px;
-        height: 40px;
-        background-position: center;
-        background-color: #000;
+    //   .download {
+    //     background: no-repeat;
+    //     background-size: 60%;
+    //     border-radius: 5px;
+    //     display: inline-block;
+    //     width: 130px;
+    //     height: 40px;
+    //     background-position: center;
+    //     background-color: #000;
 
-        &.appleStore {
-          margin-right: 5px;
-        }
-      }
-    }
+    //     &.appleStore {
+    //       margin-right: 5px;
+    //     }
+    //   }
+    // }
   }
 }
