--- a/static/less/web/home.less
+++ b/static/less/web/home.less
@@ -32,20 +32,15 @@
 
   .artis-item {
     min-width: 177px;
-    float: left;
-    margin-right: 14px;
+    display: inline-block;
+    margin-right: 10px;
     margin-bottom: 40px;
     text-align: center;
+    position: relative;
 
     &:nth-child(6n+1) {
       margin-right: 0;
     }
-
-    // &:hover {
-    //   img {
-    //     opacity: 1;
-    //   }
-    // }
 
     img {
       display: block;
@@ -59,6 +54,11 @@
       color: #f1592b;
       font-size: 18px;
       font-weight: 600;
+      display: block;
+      width: 177px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
 
       &.spesial {
         font-size: 16px
@@ -71,25 +71,30 @@
     }
 
     @media (max-width: @screen-xs) {
-      width: 130px !important;
-      min-width: 130px;
-      margin-right: 20px;
+      width: 105px !important;
+      min-width: 105px;
+      margin-right: 5px;
 
       &:nth-child(2n+1) {
-        margin-right: 0;
+        // margin-right: 0;
       }
 
       &:nth-child(6n+1) {
-        margin-right: 20px;
+        margin-right: 5px;
       }
 
       h5 {
+        width: auto;
         margin-bottom: 5px;
-        font-size: 16px
+        font-size: 11px
       }
 
       img {
         width: 100%;
+      }
+
+      span {
+        font-size: 10px;
       }
     }
   }
@@ -98,7 +103,7 @@
 
 .share-and-win {
   min-height: 768px;
-  background: #F4F4F4 url(../img/share-and-win-bg.jpg) no-repeat center;
+  background: #F4F4F4 url(../img/share-and-win-bg2.jpg) no-repeat center;
   background-size: cover;
 
   @media (max-width: @screen-xs) {
@@ -238,100 +243,5 @@
   &.timeline {
     height: 3261px;
     background: #fd470c url(../img/bg-timeline.jpg) repeat-x 0 0;
-  }
-
-  .testimony-section {
-
-    .subtitle {
-      margin-bottom: 100px;
-    }
-
-    #carousel,
-    #testimony-slider {
-      width: 975px;
-      margin: 0 auto;
-    }
-
-    #testimony-slider {
-      margin-bottom: 50px;
-
-      .content-testimony {
-        width: 600px;
-        margin: 0 auto;
-
-        blockquote {
-          width: 495px;
-          float: left;
-          padding: 0 0 0 35px;
-          background: url(../img/blockquote-up.png) no-repeat top left;
-          font-size: 24px;
-          color: #4d4d4d;
-          border-left: 0;
-          margin: 0;
-          position: relative;
-
-          &:after {
-            display: block;
-            content: " ";
-            clear: both;
-          }
-
-          a {
-            color: #f1592b;
-
-            &:hover {
-              color: lighten(#f1592b, 10%)
-            }
-          }
-
-          p {
-            padding-bottom: 45px;
-            background: url(../img/blockquote-down.png) no-repeat bottom right;
-          }
-
-          span {
-            display: block;
-            position: absolute;
-            bottom: 10px;
-            left: 35px;
-            font-size: 14px;
-            color: #23b29c;
-          }
-        }
-      }
-
-      .slides {
-        img {
-          width: 100px;
-          height: 100px;
-          border-radius: 50%;
-          display: block;
-          float: left;
-          margin-right: 5px;
-        }
-      }
-    }
-
-    #carousel {
-      margin-bottom: 30px;
-      .flex-direction-nav {
-        a {
-          width: 67px;
-          height: 67px;
-          background: url(../img/carousel-arrow.png) no-repeat;
-
-          &.flex-prev {
-            left: -85px;
-            background-position: 0 0;
-          }
-
-          &.flex-next {
-            right: -85px;
-            background-position: -68px 0;
-          }
-
-        }
-      }
-    }
   }
 }
